# boring-semantic-layer

./: .gitignore  .pre-commit-config.yaml  AAS_COMPARISON.md  ARCHITECTURE.md  CACHE_DESIGN.md  FEATURE_VIEW_CLASS_DESIGN.md  FEATURE_VIEW_SEMANTIC_MODEL_PROOF.md  Makefile  ONLINE_FEATURES_DESIGN.md  PROOF_SUMMARY.md  README.md  RELEASE_NOTES_v0.3.12.md  WHY_OPERATIONS.md  bsl-v2.md  demo_graph_utils.py  demo_operations_vs_wrappers.py  demo_simple_repr.py  flake.nix  interface-spec-v2.md  pyproject.toml  requirements-dev.txt  test_bsl_render.html  test_bsl_render.md  test_xorq_bsl_integration.py  test_xorq_profile_bsl.py
docs/: api_design_nested_views.md  index.html  malloy_calculate_comparison.md  malloy_vs_bsl_comparison.md  osi-compatibility.md  package-lock.json  package.json  vite.config.ts
docs/src/: App.tsx
example_semantic_api/: MEASURE_ADAPTATION_SUMMARY.md  cross_team_metrics_example.ipynb  example_basic.py  example_basic.yml  example_basic_inline.py  example_blog_post.py  example_deferred_demo.py
examples/: 01_basic_flights.py  02_percent_of_total.py  05_bucketing_with_other.py  06_nested_subtotals.py  README.md  __init__.py  advanced_features_example.py  advanced_modeling.py  advanced_patterns.py  basic_example_ibis.py  basic_flights.py  basic_flights_xorq.py  basic_query.py  blog_v2_demo.py  bucketing_with_other.py  cache_with_xorq.py  dashboard_example.md  deferred_api.py  demo.ipynb  dimensional_indexing.py  example.new_api.ipynb  example_basic.ipynb  example_basic.py  example_basic.yml  example_chart.ipynb  example_chart.py  example_chart_plotly.ipynb  example_flight_materialize.py  example_flight_query.py  example_flight_semantic_model.py  example_flight_v2.py  example_join_many.py  example_mcp.py  example_mcp_cohort.py  example_mpc_cohort.py  (+39 more)
examples-new-api/: example_basic.yml  example_chart.ipynb  example_flight_v2.py  example_mcp_new.py
(+442 files in other folders)
