[project]
name = "boring-semantic-layer"
version = "0.1.10"
description = "A boring semantic layer built with ibis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.3.0",
    "ibis-framework",
    "packaging", # required to install ibis-framework with no backend
    "PyYAML>=6.0",
]
urls = { Homepage = "https://github.com/boringdata/boring-semantic-layer/tree/main" }

[project.optional-dependencies]
mcp = ["mcp>=1.10.1", "fastmcp>=2.12.5"]
examples = ["ibis-framework[duckdb]>=10.6.0", "xorq"]
xorq = ["xorq"]
viz-altair = ["altair>=5.0.0"]
viz-plotly = ["plotly>=6.3.0", "kaleido"]
dev = [
    "boring-semantic-layer[mcp,examples,xorq,viz-altair,viz-plotly]",
    "ruff>=0.6.7",
    "pre-commit>=4.2.0",
    "pytest",
    "pandas>=2.3.0",
    "urllib3>=2.2.3",
    "pytest-asyncio",
    "malloy>=0.1.0", # Malloy tests
    "fastmcp>=2.12.5", # MCP tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "ipython>=8.37.0",
]
